--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<video width="320" height="240" autoplay>
+<video maxwidth="100%" height="auto" autoplay>
   <source src="img/splash screen with possible name.mp4" type="video/mp4">
 
 </video>
