--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<video maxwidth="100%" height="auto" autoplay>
+<head>
+<!-- The video -->
+<video autoplay muted loop id="myVideo">
   <source src="img/splash screen with possible name.mp4" type="video/mp4">
-
 </video>
-
-</body>
+</head>
 </html>
