--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!-- The video -->
-<video autoplay muted loop id="myVideo">
+<video maxwidth="100%" height="auto" autoplay muted loop id="myVideo">
   <source src="img/splash screen with possible name.mp4" type="video/mp4">
 </video>
 </head>
