--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="styles/style.css" rel="stylesheet" />
 <!-- The video -->
-<video maxwidth="100%" height="auto" autoplay muted loop id="myVideo">
+<video autoplay muted loop id="myVideo">
   <source src="img/splash screen with possible name.mp4" type="video/mp4">
 </video>
 </head>
