--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="styles/style.css" rel="stylesheet" />
-<!-- The video -->
-<video autoplay muted loop id="myVideo">
-  <source src="img/splash screen with possible name.mp4" type="video/mp4">
-</video>
-</head>
-</html>
+
+  <div class="video-wrapper">
+    <video playsinline autoplay muted loop poster="cake.jpg">
+      <source src="img/splash screen with possible name.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
